--- a/webapp/src/components/WhenToUse.css
+++ b/webapp/src/components/WhenToUse.css
@@ -109,6 +109,7 @@
     flex-direction: column;
     height: auto;
     min-height: 100vh;
+    overflow: visible;
   }
   
   .when-left {
